test/errors/error34.base
A member with the name 'e' has already been declared at line 2, columns 6-7
  val e : int;
  val e : int;
      ^
